[gd_scene load_steps=5 format=3 uid="uid://dqci15bl2hlpd"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_deb5v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ric1a"]
bg_color = Color(0.243137, 0.372549, 0.45098, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8uef"]
bg_color = Color(0.427451, 0.603922, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0con8"]
bg_color = Color(0.164706, 0.231373, 0.278431, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.446777, 0.446777, 0.446777, 0.560784)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_deb5v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Frozen Odyssey"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="NewGameButton" type="Button" parent="VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ric1a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f8uef")
theme_override_styles/normal = SubResource("StyleBoxFlat_0con8")
text = "New Game"

[node name="ContinueButton" type="Button" parent="VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ric1a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f8uef")
theme_override_styles/normal = SubResource("StyleBoxFlat_0con8")
text = "Continue"

[node name="ExitButton" type="Button" parent="VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ric1a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f8uef")
theme_override_styles/normal = SubResource("StyleBoxFlat_0con8")
text = "Exit"
